# oksconflibs

./: CMakeLists.txt
cmake/: oksconfigConfig.cmake.in  oksconflibsConfig.cmake.in
include/oksconfig/: OksConfigObject.hpp  OksConfiguration.hpp
include/oksconflibs/: OksConfigObject.hpp  OksConfiguration.hpp
src/: OksConfigObject.cpp  OksConfiguration.cpp
test/: README
test/apps/: test_create_oksdb.cxx  test_oksdb.cxx
